change the readme.md file

--- a/advance-logger.html
+++ b/advance-logger.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('logger', {
         category: 'output',
-        color: '#009999',
+        color: '#B2EBF2',
         defaults: {
             name: {
                 value: ""
